<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="task_cd_add_task" translatable="false">Add task</string>
    <string name="task_list_header_empty" translatable="false">Wow! All tasks are completed!</string>
    <string name="task_list_cd_empty_list" translatable="false">That\'s all clear</string>
    <string name="task_list_header_error" translatable="false">Oops… That\'s embarrassing…</string>
    <string name="task_list_cd_error" translatable="false">Something went wrong</string>
    <string name="task_detail_header_error" translatable="false">This task is no longer available</string>
    <string name="task_detail_cd_error" translatable="false">Task not found</string>

    <string name="task_detail_cd_icon_category" translatable="false">Categories</string>
    <string name="task_detail_cd_icon_description" translatable="false">Description</string>
    <string name="task_detail_cd_icon_alarm" translatable="false">Alarm</string>
    <string name="task_detail_cd_icon_remove_alarm" translatable="false">Remove alarm</string>
    <string name="task_detail_cd_icon_repeat_alarm" translatable="false">Repeating alarm</string>

    <string name="task_detail_category_empty_list" translatable="false">No categories</string>

    <string name="task_detail_alarm_no_alarm" translatable="false">No alarm</string>

    <string name="task_add_save" translatable="false">Add</string>
    <string name="task_add_label" translatable="false">Task</string>

    <string name="task_snackbar_message_complete" translatable="false">\"%s\" completed</string>
    <string name="task_snackbar_button_undo" translatable="false">Undo</string>

    <string name="task_alarm_permission_dialog_title" translatable="false">Alarm and reminders</string>
    <string name="task_alarm_permission_dialog_text" translatable="false">In order to alarms work, TodoList needs the permission to set alarms and reminders. If this permission is not granted, the existing alarms will not work as well.</string>
    <string name="task_alarm_permission_dialog_confirm" translatable="false">Grant permission</string>
    <string name="task_alarm_permission_dialog_cancel" translatable="false">Not now</string>
</resources>
